// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<ThemeContextProvider
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <ListSectionHeader
    isCollapsed={false}
    isCollapsible={false}
    level={2}
    title="test"
  >
    <li
      className="list-item orion-fusion-theme"
    >
      <h2
        className="title"
      >
        <div
          className="section-header"
        >
          <div
            className="fill"
          >
            test
          </div>
        </div>
      </h2>
    </li>
  </ListSectionHeader>
</ThemeContextProvider>
`;

exports[`should render default 1`] = `
<li
  className="list-item"
>
  <h2
    className="title"
  >
    <div
      className="section-header"
    >
      <div
        className="fill"
      >
        test
      </div>
    </div>
  </h2>
</li>
`;

exports[`should render with callback functions 1`] = `
<li
  className="list-item"
>
  <h2
    className="title"
  >
    <div
      aria-expanded={true}
      className="section-header is-collapsible"
      data-item-show-focus="true"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <div
        className="start"
      >
        <span
          className="accordion-icon is-open"
        />
      </div>
      <div
        className="fill"
      >
        test
      </div>
    </div>
  </h2>
</li>
`;

exports[`should render with isCollapsed 1`] = `
<li
  className="list-item"
>
  <h2
    className="title"
  >
    <div
      className="section-header"
    >
      <div
        className="fill"
      >
        test
      </div>
    </div>
  </h2>
</li>
`;

exports[`should render with isCollapsible 1`] = `
<li
  className="list-item"
>
  <h2
    className="title"
  >
    <div
      aria-expanded={true}
      className="section-header is-collapsible"
      data-item-show-focus="true"
      onBlur={[Function]}
      onMouseDown={[Function]}
      role="button"
      tabIndex="0"
    >
      <div
        className="start"
      >
        <span
          className="accordion-icon is-open"
        />
      </div>
      <div
        className="fill"
      >
        test
      </div>
    </div>
  </h2>
</li>
`;

exports[`should render with level 1`] = `
<li
  className="list-item"
>
  <h3
    className="title"
  >
    <div
      className="section-header"
    >
      <div
        className="fill"
      >
        test
      </div>
    </div>
  </h3>
</li>
`;
